Update lien img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CIELIX</title>
 
-        <link rel="stylesheet" href="assets/styles.css">
+        <link rel="stylesheet" href="./assets/styles.css">
     </head>
 
     <body>
@@ -37,7 +37,7 @@
               <div class="new_film">
                 <h3>Aquaman et le Royaume perdu</h3>
                 <p>Genre : Action/Cinéma de fantasy <span>Duré : 1h 55m</span></p>
-                <img class="img_new" id="img_aqua" src="/img/Aquaman-2.webp" alt="" width="90%">
+                <img class="img_new" id="img_aqua" src="./img/Aquaman-2.webp" alt="" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_aqua">Appuyer ici</button></p>
                 <p class="p_u">Plusieurs années après les événements du film précédent, ayant vaincu son demi-frère Orm et pris le trône d'Atlantis, 
                   Arthur Curry / Aquaman mène une vie familiale paisible avec sa femme Mera et leur bébé, Arthur Jr..
@@ -52,7 +52,7 @@
               <div class="new_film">
                 <h3>Wonka</h3>
                 <p>Genre : Cinéma de fantasy/Musical <span>Duré : 1h 56m</span> </p>
-                <img class="img_new" id="img_won" src="/img/wonka.jfif" alt=""  width="90%">
+                <img class="img_new" id="img_won" src="./img/wonka.jfif" alt=""  width="90%">
                 <p>Pour voir la bande annonce : <button id="b_won">Appuyer ici</button></p>
                 <p class="p_u">Le jeune Willy Wonka, extraordinaire inventeur, magicien et chocolatier, tente de mettre en place une boutique de chocolat en ville. 
                   Il affronte le cartel des chocolatiers qui voit d'un mauvais oeil son arrivée, 
@@ -75,7 +75,7 @@
               <div class="cat">
                 <h3>Pacific Rim</h3>
                 <p>Genre : SF/Action <span>Duré : 2h 11m</span></p>
-                <img id="img_pac" src="/img/pacific-rim.jpeg" width="90%">
+                <img id="img_pac" src="./img/pacific-rim.jpeg" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_pac">Appuyer ici</button></p>
                 <p>Le film met en scène des Humains utilisant des robots Mecha pour affronter des Kaijūs. 
                   Ces derniers sont des créatures extraterrestres sorties d'une brèche interdimensionnelle près de la faille géologique au fond de l'océan Pacifique en août 2013.
@@ -94,7 +94,7 @@
               <div class="cat">
                 <h3>Deadpool</h3>
                 <p>Genre : Action/Comédie <span>Duré : 1h 48m</span> </p>
-                <img id="img_dead" src="/img/deadpool.jpg" width="90%">
+                <img id="img_dead" src="./img/deadpool.jpg" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_dead">Appuyer ici</button></p>
                 <p>L'histoire du film revient sur sa vie de mercenaire rencontrant l'amour, avant d'accepter un traitement expérimental contre le cancer qui pourrait le sauver, 
                   qui a en fait pour but de le transformer en esclave. Voyant le traitement le rendre presque immortel grâce à un pouvoir de guérison accéléré mais qui le défigure, 
@@ -106,7 +106,7 @@
               <div class="cat">
                 <h3>Astérix et Obélix : Mission Cléopâtre</h3>
                 <p> Genre : Comédie/Aventure <span>Duré : 1h 47m</span> </p>
-                <img id="img_aste" src="/img/asterix.webp" width="90%">
+                <img id="img_aste" src="./img/asterix.webp" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_aste">Appuyer ici</button></p>
                 <p>Cléopâtre, la reine d'Égypte, décide, pour prouver à Jules César la grandeur de la civilisation égyptienne, 
                   de construire un palais en plein désert en l'espace de trois mois. Pour cela, elle fait appel à l'architecte Numérobis. 
@@ -122,7 +122,7 @@
               <div class="cat">
                 <h3>Dragons</h3>
                 <p>Genre : Action/Cinéma de fantasy <span>Duré : 1h 38m</span></p>
-                <img id="img_dra" src="/img/dragons.webp" width="90%">
+                <img id="img_dra" src="./img/dragons.webp" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_dra">Appuyer ici</button></p>
                 <p>Harold est un jeune viking, qui grandit dans un village côtier régulièrement attaqué par des dragons. 
                   Sa maladresse le laisse à l'écart de ses compagnons, tous d'intrépides guerriers. 
@@ -137,7 +137,7 @@
               <div class="cat">
                 <h3>Black Panther</h3>
                 <p>Genre : Action/SF<span>Duré : 2h 15m</span></p>
-                <img id="img_blac" src="/img/black_panther.jpg" width="90%">
+                <img id="img_blac" src="./img/black_panther.jpg" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_blac">Appuyer ici</button></p>
                 <p>Après avoir participé à l'affrontement entre Iron Man et Captain America, le prince T'Challa retourne chez lui dans la nation africaine reculée et technologiquement avancée du Wakanda, 
                   pour servir son pays en tant que nouveau roi. Cependant, le pouvoir de T'Challa va bientôt être défié par des membres de son propre pays. 
@@ -150,7 +150,7 @@
               <div class="cat">
                 <h3>Fast and Furious 7</h3>
                 <p>Genre : Action/Crime <span>Duré : 2h 20m</span></p>
-                <img id="img_fast" src="/img/fast-furious-7 1.webp" width="90%">
+                <img id="img_fast" src="./img/fast-furious-7 1.webp" width="90%">
                 <p>Pour voir la bande annonce : <button id="b_fast">Appuyer ici</button></p>
                 <p>Cette fois la menace prend les traits d'un tueur à gages des opérations spéciales britanniques aussi insaisissable qu'impitoyable, qui n'a d'obsession que la vengeance. 
                   Commençant par éliminer Han sans autre forme de procès à Tokyo, puis s'attaquant à Hobbs à Los Angeles, 
@@ -172,6 +172,6 @@
           </p>
 
         </footer>
-        <script src="/assets/script.js"></script>
+        <script src="./assets/script.js"></script>
     </body>
 </html>
